# study-cng-overture-buildings-tile

./: .gitignore  LICENSE.md  README.md  pyproject.toml
docker/: Dockerfile
docs/: index.html  knative-on-macos.md  style.json
k8s/: ksvc.yaml
src/buildings_cng/: __init__.py  duckdb_query.py  filters.py  mvt.py  server.py  stac_index.py
