[project]
name = "buildings-cng"
version = "0.1.0"
description = "On-the-fly dynamic vector tile server for Overture Buildings (CNG-native)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # DuckDB Spatial reads Overture GeoParquet from S3 directly via httpfs.
    "duckdb>=1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mercantile>=1.2",
    "mapbox-vector-tile>=2.0",
    "shapely>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buildings_cng"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
